New Crowdin updates (#775)
* feat: rework leaderboard (#762)

* feat: init rework UI leaderboard

* rework: leaderboard

* fix: snapshot

* New Crowdin updates (#770)

* New translations en.json (French)
[ci skip]

* New translations en.json (Spanish)
[ci skip]

* New translations en.json (Arabic)
[ci skip]

* New translations en.json (Bulgarian)
[ci skip]

* New translations en.json (Czech)
[ci skip]

* New translations en.json (German)
[ci skip]

* New translations en.json (Italian)
[ci skip]

* New translations en.json (Japanese)
[ci skip]

* New translations en.json (Polish)
[ci skip]

* New translations en.json (Russian)
[ci skip]

* New translations en.json (Swedish)
[ci skip]

* New translations en.json (Turkish)
[ci skip]

* New translations en.json (Chinese Simplified)
[ci skip]

* New translations en.json (Portuguese, Brazilian)
[ci skip]

* New translations en.json (Hebrew, Int)
[ci skip]

* New translations en.json (Karakalpak)
[ci skip]

* Update source file en.json
[ci skip]

* chore(deps-dev): Bump @babel/core from 7.24.4 to 7.24.7 (#773)

Bumps [@babel/core](https://github.com/babel/babel/tree/HEAD/packages/babel-core) from 7.24.4 to 7.24.7.
- [Release notes](https://github.com/babel/babel/releases)
- [Changelog](https://github.com/babel/babel/blob/main/CHANGELOG.md)
- [Commits](https://github.com/babel/babel/commits/v7.24.7/packages/babel-core)

---
updated-dependencies:
- dependency-name: "@babel/core"
  dependency-type: direct:development
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* doc: update Readme

* New Crowdin updates (#771)

* New translations en.json (French)
[ci skip]

* New translations en.json (Arabic)
[ci skip]

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <

--- a/src/lang/locale/ar.json
+++ b/src/lang/locale/ar.json
@@ -62,7 +62,8 @@
     "exitGame": "أنت مجبر على الخروج من اللعبة. إعادة التوجيه إلى الصفحة الرئيسية بعد 5 ثوان...",
     "waitForOtherPlayersToFinish": "في انتظار اللاعبين الآخرين لإنهاء اللعبة...",
     "confirmExit": "هل أنت متأكد من ترك اللعبة الحالية؟ سيؤدي هذا إلى إلغاء اللعبة!",
-    "countdownAlert": "Countdown started : {count} second remaining | Countdown started : {count} seconds remaining"
+    "countdownAlert": "بدأ العد التنازلي: {count} ثانية متبقية | بدأ العد التنازلي: {count} ثوانٍ متبقية",
+    "leaderboard": "المتصدرون"
   },
   "Maps": {
     "makeGuess": "ادارة الضوضاء",
@@ -191,7 +192,7 @@
   "DialogSummary": {
     "summaryMsgSinglePoints": "نتيجتك هي <strong>{points}</strong> نقاط! ",
     "summaryMsgSingleDistance": "أنت على بعد <strong>{distance}</strong> كم!",
-    "summaryMsgMultiPoints": "<strong>{playerName}</strong> score is <strong>{points}</strong> ! ",
+    "summaryMsgMultiPoints": "<strong>{playerName}</strong> نتيجته <strong>{points}</strong> ! ",
     "summaryMsgMultiDistance": "(<strong>{distance}</strong> كم)",
     "viewDetails": "عرض التفاصيل"
   },
