--- a/src/lang/locale/de.json
+++ b/src/lang/locale/de.json
@@ -63,7 +63,7 @@
     "waitForOtherPlayersToFinish": "Warte auf weitere Spieler, um das Spiel zu beenden...",
     "confirmExit": "Bist du sicher, dass du das aktuelle Spiel verlassen möchtest? Das Spiel wird dadurch abgebrochen!",
     "countdownAlert": "Countdown gestartet: {count} Sekunde verbleibend | Countdown gestartet: {count} Sekunden verbleibend",
-    "leaderboard": "Leaderboard"
+    "leaderboard": "Bestenliste"
   },
   "Maps": {
     "makeGuess": "TIPP ABGEBEN",
@@ -78,8 +78,8 @@
       "Points": "Punkte"
     },
     "leaderboard": {
-      "notGuessed": "Not Guessed",
-      "guessed": "Guessed"
+      "notGuessed": "Nicht erraten",
+      "guessed": "Erraten"
     }
   },
   "Header": {
@@ -137,7 +137,7 @@
     "invalidRoomName": "Ungültiger Name. Bitte versuche einen anderen.",
     "inProgress": "Der erste Spieler erstellt den Raum. Bitte warte und versuche es erneut.",
     "roomIsFull": "Dieser Raum ist bereits voll. Versuche einen anderen.",
-    "alreadyStarted": "Dieser Raum hat bereits begonnen. Bitte versuche einen anderen."
+    "alreadyStarted": "Ein Spiel mit diesem Namen läuft bereits. Bitte wähle einen anderen Namen."
   },
   "CardRoomName": {
     "title": "Gebe einen Raumnamen ein, um einen neuen Raum zu erstellen, oder einem bereits existierenden Raum beizutreten"
@@ -158,7 +158,7 @@
   "CardRoomMap": {
     "title": "Gestalte deine Karte",
     "loadBtn": "Karte laden",
-    "reset": "Reset",
+    "reset": "Zurücksetzen",
     "cantPlayGeoJson": "Ungültiges GeoJSON, du musst mehr als 5 Positionen haben."
   },
   "CardRoomSettings": {
@@ -170,8 +170,8 @@
     "allowMove": "Bewegen zulassen",
     "allowZoom": "Zoomen zulassen",
     "allowPan": "Schwenken zulassen",
-    "guessedLeaderboard": "Display whether players have guessed",
-    "scoreLeaderboard": "Display score leaderboard",
+    "guessedLeaderboard": "Anzeigen, ob Spieler bereits einen Tipp abgegeben haben",
+    "scoreLeaderboard": "Bestenliste anzeigen",
     "countDownLabel": "Countdown (Sekunden)",
     "scoreModeLabel": "Punkteberechnung",
     "scoreModes": {
