Fix PL message for "viewSummary"

--- a/src/lang/locale/pl.json
+++ b/src/lang/locale/pl.json
@@ -69,7 +69,7 @@
     "makeGuess": "ZGADNIJ",
     "guess": "ZGADUJ",
     "nextRound": "NASTĘPNA RUNDA",
-    "viewSummary": "POKARZ PODSUMOWANIE",
+    "viewSummary": "POKAŻ PODSUMOWANIE",
     "exit": "WYJDŹ",
     "reset": "ANULUJ",
     "playAgain": "ZAGRAJ PONOWNIE",
